<resources>
    <string name="app_name">MDP_Android</string>
    <string name="action_config">Config</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="bt">Bluetooth</string>
    <string name="explore">explore</string>
    <string name="fastest">Fastest.P</string>
    <string name="calibrate">F.P. Cali.</string>
    <string name="robotreset">Rbt Reset</string>
    <string name="allreset">Reset All</string>
    <!--Config-->
    <string name="custom1">Custom 1</string>
    <string name="custom2">Custom 2</string>
    <string name="save">Save</string>
    <string name="print">Print results</string>

    <string name="discover">Discover</string>
    <string name="AvailableDevices">Available Devices</string>
    <string name="Paired">Paired</string>
    <string name="StartCoordText">Start Coord: (x, y, direction)</string>
    <string name="WayPointText">Way Point Coord: (x,y)</string>

    <string name="showHexDec">Grid HexDec</string>

    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="listening">listening</string>
    <string name="not_connected">not connected</string>
</resources>
