<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.mdp_android.GridViewRect
            android:id="@+id/arena"
            android:layout_width="405dp"
            android:layout_height="540dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnExplore"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/explore" />

            <Button
                android:id="@+id/btnFastest"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100px"
                android:text="@string/fastest" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtnUp"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginLeft="105dp"
                android:layout_marginRight="70dp"
                app:srcCompat="@drawable/up" />

            <Button
                android:id="@+id/btnRobotReset"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/robotreset" />

            <Button
                android:id="@+id/btnResetAll"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/allreset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtnLeft"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginLeft="35dp"
                app:srcCompat="@drawable/left" />

            <ImageButton
                android:id="@+id/imgBtnDown"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/down" />

            <ImageButton
                android:id="@+id/imgBtnRight"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/right" />

            <Button
                android:id="@+id/btnCtm1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/custom1" />

            <Button
                android:id="@+id/btnCtm2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/custom2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/swtTilt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Tilt Control" />

            <Switch
                android:id="@+id/swtAutoUpdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:checked="true"
                android:text="Auto Update Grid" />
            <Button
                android:id="@+id/btnUpdateGrid"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="Update Grid" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Initializing Bluetooth Connection" />

    </LinearLayout>

</LinearLayout>