<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSettingStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRobotStartCoord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartCoordText" />

        <EditText
            android:id="@+id/tbXcoord"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:autofillHints="Insert Numbers"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/tbYcoord"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/tbDirection"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWayPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WayPointText" />

        <EditText
            android:id="@+id/tbWPxCoord"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:autofillHints="Insert Numbers"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/tbWPyCoord"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCtm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Custom String 1" />

        <EditText
            android:id="@+id/tbCtm1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvCtm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="Custom String 2" />

        <EditText
            android:id="@+id/tbCtm2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnShowGridHexDec"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="Grid HexDec" />
        <TextView
            android:id="@+id/tvGridHexDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/showHexDec" />
    </LinearLayout>

</LinearLayout>